# llm-finetuning

./: .dockerignore  .flake8  .pre-commit-config.yaml  .shellcheckrc  README.md  pyproject.toml  requirements-dev.txt  requirements-rocm7.2.txt  requirements.txt
.github/workflows/: common.yml  package.yml
docker/: build-and-push-silogen-finetuning-image.sh  cuda-silogen-finetuning-base.Dockerfile  cuda-silogen-finetuning-worker.Dockerfile  rocm-silogen-finetuning-base.Dockerfile  rocm-silogen-finetuning-worker.Dockerfile  rocm7.2-silogen-finetuning-base.Dockerfile  rocm7.2-silogen-finetuning-worker  rocm7.2-silogen-finetuning-worker.Dockerfile
scripts/: create_finetuning_config_schema.py  generate_markdown_config_doc.py  override_requirements.py  test_package_installation.py
src/finetuning/: __init__.py  cli.py  dpo.py  generate.py  model.py  sft.py
src/finetuning/config/: README.md  __init__.py  base.py  data.py  experiment.py  generation.py  hf_integration.py  inference.py  quantization.py  run.py  tracking.py
src/finetuning/data/: __init__.py  chat_templates.py  collator.py  data_types.py  dataset.py  setup.py  tokenizer.py
src/finetuning/utils/: __init__.py  checkpoints.py  conventions.py  distributed.py  merge_adapter.py  model.py  replace_tokens.py  running_process_opts.py  serialization.py  tracking.py  training.py  vllm_compatibility.py
tests/: conftest.py  test_chat_template.py  test_collator.py  test_configs.py  test_data_setup.py  test_dataset.py  test_e2e.py  test_model_setup.py  test_replace_tokens.py  test_serialization.py  test_sft_truncation.py  test_tokenizer.py  test_tracking.py  test_trainer_setup.py  test_utils.py  test_vllm_compatibility.py
